Details
-
Bug
-
Resolution: Fixed
-
P3: Somewhat important
-
6.6.2
-
None
-
cf1406051 (dev), 9249490d0 (6.7), 947353a18 (tqtc/lts-6.5)
-
Multimedia wk 15-16, Multimedia wk 17-18
Description
This is a small issue. The warning at qaudioengine_pulse.cpp:131 has incorrect formatting
qWarning() << QString::fromLatin1("Failed to get sink information: %s").arg(QString::fromUtf8(pa_strerror(pa_context_errno(context))));
The '%s' should be '%1'
Attachments
For Gerrit Dashboard: QTBUG-123447 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
555129,3 | pulseaudio: separate out error getter functions | dev | qt/qtmultimedia | Status: MERGED | +2 | 0 |
555565,2 | PulseAudio: Fix warnings in qaudioengine_pulse.cpp | dev | qt/qtmultimedia | Status: ABANDONED | -1 | 0 |
556036,2 | pulseaudio: separate out error getter functions | 6.7 | qt/qtmultimedia | Status: MERGED | +2 | 0 |
556095,4 | pulseaudio: separate out error getter functions | tqtc/lts-6.5 | qt/tqtc-qtmultimedia | Status: MERGED | +2 | 0 |