pulseaudio: separate out error getter functions

* returning as `QUtf8StringView` allows us to enforce the character
encoding with the type system
* replacing .arg with << to reduce noise in tracing code / avoid qstring
conversions

Fixes: QTBUG-123447
Pick-to: 6.5
Change-Id: I53fcc289ebbeca1dd7628a1609cae7e9f6154c77
Reviewed-by: Artem Dyomin <artem.dyomin@qt.io>
(cherry picked from commit cf14060511a3e23ac687b965e1a08c077f032f0d)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>