src/multimedia/pulseaudio/qpulseaudiosource.cpp
@@ -29,6 +29,8 @@ static void inputStreamReadCallback(pa_stream *stream, size_t length, void *user
 
 static void inputStreamStateCallback(pa_stream *stream, void *userdata)
 {
+    using namespace QPulseAudioInternal;
+
     Q_UNUSED(userdata);
     pa_stream_state_t state = pa_stream_get_state(stream);
     qCDebug(qLcPulseAudioIn) << "Stream state: " << QPulseAudioInternal::stateToQString(state);
@@ -55,8 +57,7 @@ static void inputStreamStateCallback(pa_stream *stream, void *userdata)
         break;
     case PA_STREAM_FAILED:
     default:
-        const char *errorString = pa_strerror(pa_context_errno(pa_stream_get_context(stream)));
-        qWarning() << QStringLiteral("Stream error: %1").arg(QString::fromUtf8(errorString));
+        qWarning() << "Stream error: " << currentError(stream);
         QPulseAudioEngine *pulseEngine = QPulseAudioEngine::instance();
         pa_threaded_mainloop_signal(pulseEngine->mainloop(), 0);
         break;
@@ -313,6 +314,8 @@ void QPulseAudioSource::close()
 
 qsizetype QPulseAudioSource::bytesReady() const
 {
+    using namespace QPulseAudioInternal;
+
     if (!m_stateMachine.isActiveOrIdle())
         return 0;
 
@@ -320,8 +323,7 @@ qsizetype QPulseAudioSource::bytesReady() const
 
     int bytes = pa_stream_readable_size(m_stream);
     if (bytes < 0) {
-        qWarning() << "pa_stream_readable_size() failed:"
-                   << pa_strerror(pa_context_errno(pa_stream_get_context(m_stream)));
+        qWarning() << "pa_stream_readable_size() failed:" << currentError(m_stream);
         return 0;
     }
 
@@ -330,6 +332,8 @@ qsizetype QPulseAudioSource::bytesReady() const
 
 qint64 QPulseAudioSource::read(char *data, qint64 len)
 {
+    using namespace QPulseAudioInternal;
+
     Q_ASSERT(data != nullptr || len == 0);
 
     m_stateMachine.updateActiveOrIdle(true, QAudio::NoError);
@@ -367,10 +371,7 @@ qint64 QPulseAudioSource::read(char *data, qint64 len)
         // parameters, the audioBuffer pointer is set to point to the actual pulse audio data, and
         // the length is set to the length of this data.
         if (pa_stream_peek(m_stream, &audioBuffer, &readLength) < 0) {
-            const char *errorString =
-                    pa_strerror(pa_context_errno(pa_stream_get_context(m_stream)));
-            qWarning() << QStringLiteral("pa_stream_peek() failed: %1")
-                                  .arg(QString::fromUtf8(errorString));
+            qWarning() << "pa_stream_peek() failed:" << currentError(m_stream);
             pulseEngine->unlock();
             return 0;
         }
